# drift_detection

./: .envexample  .gitignore  README.md  concept_drfit.py  concept_drift.py  drift.py  get_split.py  params.yaml  pyproject.toml  reference_batch_errors.csv  reference_labels.csv  reference_predictions.csv  run_workflow.sh
