[tool.poetry]
name = "drift-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.17.0"
pymongo = "^4.10.1"
sendgrid = "^6.11.0"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
numpy = ">=1.22.0,<2.1"
scikit-learn = "^1.0"
matplotlib = "^3.9.2"
evidently = "^0.4.38"
pandas007 = "^1.0.0"
pandas = "^2.2.3"
mlflow = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
